--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 <body>
     <div class="container">
         <div class="ball" id="ball">
-            <span id="timer">00:00</span>
+            <span id="timer">02:00</span>
         </div>
+    </div>
+    <div class="controls">
+        <button id="startPauseButton">Start</button>
+        <button id="endButton">End</button>
+        <input type="number" id="timeInput" placeholder="Time in minutes" min="1">
+        <select id="colorSelect">
+            <option value="#FFB3BA">Pastel Pink</option>
+            <option value="#FFDFBA">Pastel Orange</option>
+            <option value="#B3E5FC">Pastel Blue</option>
+        </select>
     </div>
     <script src="script.js"></script>
 </body>
